FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20121010:
AUTHOR: bapt@FreeBSD.org

  * IPV6 option is now activated by default for the whole ports tree

20121010:
AUTHOR: bapt@FreeBSD.org

  * The ports tree is now using pkgng as the default package manager
    for HEAD.  This only affects users of CURRENT -- users of other
    branches need not take any action.

    To keep pkg_install as the default package manager, use the new
    WITHOUT_PKGNG knob in make.conf

20120830:
AUTHOR: beat@FreeBSD.org

  * CCACHE support for building ports has been added (depends on
    devel/ccache). Therefore new user settable variables are available:

    WITH_CCACHE_BUILD - Enable CCACHE support (Default off)

    NO_CCACHE         - Disable CCACHE support for example for certain
                        ports if CCACHE is enabled.

    By default CCACHE uses $HOME/.ccache as cache directory. To use
    a non-default cache directory this could be overwritten like:

    MAKE_ENV+= CCACHE_DIR=/var/cache/ccache

20120820:
AUTHOR: gahr@FreeBSD.org

  * GitHub support has been integrated into bsd.sites.mk. In order to
    fetch distfiles from GitHub, a port must define USE_GITHUB along
    with the following variables:

    GH_ACCOUNT  - account name of the GitHub user hosting the project
                  default: not set, mandatory

    GH_PROJECT  - name of the project on GitHub
                  default: ${PORTNAME}

    GH_TAGNAME  - name of the tag to download (master, 2.0.1, ...)
                  default: ${DISTVERSION}

    GH_COMMIT   - first 7 digits of the commit that generated GH_TAGNAME
                  (man git-describe(1))
                  default: not set, mandatory
